# clio_cli

./: .env  .env.codex  .gitignore  .spectral.yaml  MODEL_CUSTODIAN_GUIDE.md  MODEL_CUSTODIAN_PORTABLE_GUIDE.md  PORTABILITY_SUMMARY.md  __main__.py  api_calls_summary.yaml  app.py  audit_models.py  audit_models_simple.py  authorize_and_fetch_tokens.py  check_db.py  clio_patch_notes.md  clio_token_store.json  codex.md  copilot_derive_api_calls.py  dedup_tasks_data.py  deduplicated_tasks.xlsx  inspect_api.py  load_pydantic.py  main.py  manage_models.py  mock_clio_client.py  models.py  new_openapi.yaml  openapi-config.yaml  openapi-python-client-config.yaml  openapi.yaml  openapi_sdk.yaml  portable_manage_models.py  pyproject.toml  run_codex.sh  setup_codex.py  styles.css  tasks_data.py  tasks_report_2025-05-20-14-11-41.xlsx  test_model_fixes.sh  textual.css
.copilot/: settings.json
clio_client/: .gitlab-ci.yml  .python-version  .travis.yml  README.md  __init__.py  api_wrapper.py  auth.py  authorize_and_fetch_tokens_patched.py  check_duplicates.py  clio_api_client.py  clio_openapi.json  clio_openapi_extension.json  clio_token_store.json  config.py  config.yaml  custom_api.json  custom_openapi.json  fix_annotated_defaults.py  generate_models.py  merge_openapi.py  models  openapi.json  openapi_client_README.md  pyproject.toml  requirements.txt  session.py  setup.py  test_clio_connection.py  test_compute_statute.py  tox.ini  webhook_listener.py
clio_clients/: __init__.py  base.py  clio_api_client.py  clio_dynamic_client.py  clio_generated_client.py  clio_session.py  users.py  (+5 more)
(+8050 files in other folders)
