[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clio-dashboard-app"
version = "0.1.0"
description = "A Textual CLI dashboard for the Clio API"
authors = [{ name = "Travis Crawford", email = "travis.crawford@cfelab.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"

dependencies = [
    "httpx>=0.25.0",
    "textual>=0.40.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0",
]

[project.scripts]
clio-dashboard = "clio_dashboard_app.__main__:run_dashboard"

[tool.setuptools]
packages = ["clio_dashboard_app", "clio_dashboard_app.views", "clio_dashboard_app.clio_client"]

[tool.setuptools.package-data]
clio_dashboard_app = ["*.env"]
